--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -20,3 +20,39 @@
     height: 100%;
     width: auto;
 }
+
+.flex-container {
+    display: flex;
+}
+
+.flex-container>div {
+    margin: 16px;
+}
+
+.left {
+    width: 76%;
+}
+
+.released-movie-grid-item {
+    margin: 8px;
+}
+
+.right {
+    padding-top: 20px;
+    width: 24%;
+}
+
+@media (max-width: 992px) {
+    .flex-container {
+        flex-direction: column;
+    }
+    .left {
+        width: 100%;
+    }
+    .right {
+        width: 90%;
+    }
+    .released-movie-grid-item {
+        margin: 8px;
+    }
+}
